[gd_scene load_steps=7 format=2]

[ext_resource path="res://Shared/Fonts/jelle-bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu/main-menu.gd" type="Script" id=2]
[ext_resource path="res://Shared/Fonts/jelle-bold-48.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 4
outline_color = Color( 0.964706, 0.454902, 0.454902, 1 )
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Title:bbcode_text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "[center]Russia Connect[color=red]_[/color][/center]", "[center]Russia Connect_[/center]" ]
}

[sub_resource type="Animation" id=3]
resource_name = "intro"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Title:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="MainMenu" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_right = -120.0
custom_constants/separation = 30
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="."]
margin_top = 225.0
margin_right = 1040.0
margin_bottom = 305.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Russia Connect[color=red]_[/color][/center]"
text = "Russia Connect_"
fit_content_height = true

[node name="StartButton" type="Button" parent="."]
margin_top = 335.0
margin_right = 1040.0
margin_bottom = 400.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "Start"

[node name="QuitButton" type="Button" parent="."]
margin_top = 430.0
margin_right = 1040.0
margin_bottom = 495.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/intro = SubResource( 3 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
